# fastslide

./: MANIFEST.in  README.md  meson.build  meson_options.txt  pyproject.toml
.github/workflows/: mirror-issues-to-internal-monorepo.yaml
benchmarks/: fastslide_tile_benchmark.cpp  openslide_tile_benchmark.cpp
docs/: Doxyfile  MRXS_INDEX_FILE_FORMAT.md  Makefile  doxygen_header.html  doxygen_stylesheet.css  requirements.in  requirements_darwin.txt  requirements_linux.txt
docs/source/: Makefile  architecture.rst  caching.rst  conf.py  index.rst  overview.rst
docs/source/_static/: custom.css
docs/source/api/: cpp_api.rst  cross_reference.rst  index.rst  python_api.rst
docs/source/examples/: index.rst
docs/source/formats/: index.rst  mrxs.rst  qptiff.rst  svs.rst
docs/source/guides/: external_reader.rst  index.rst  new_reader.rst
include/aifocore/concepts/: numeric.h
include/aifocore/ranges/: zip.h
include/aifocore/shared/: exceptions.h  vector.h
include/aifocore/shared/python/: vector.h
include/aifocore/status/: status_macros.h
include/aifocore/tiling/: grid.h
include/aifocore/tiling/python/: grid_wrapper.h
include/aifocore/utilities/: bs_thread_pool.h  fmt.h  pyvips.h  spinners.h  temporary.h  thread_pool_singleton.h  vips.h  zip.h
include/fastslide/: associated_data.h  fastslide.h  image.h  metadata.h  slide_options.h  slide_reader.h
include/fastslide/c/: fastslide.h  image.h  registry.h  slide_reader.h  utilities.h
include/fastslide/core/: metadata.h  slide_descriptor.h  tile_plan.h  tile_request.h
include/fastslide/python/: cache.h  reader.h
include/fastslide/readers/: reader_factory.h  readers.h  tiff_based_reader.h  tiff_based_tile_executor.h  tiff_reader_factory.h
include/fastslide/readers/aperio/: aperio.h  aperio_format_plugin.h  aperio_plan_builder.h  aperio_tile_executor.h  metadata_parser.h
include/fastslide/readers/mrxs/: mrxs.h  mrxs_constants.h  mrxs_data_reader.h  mrxs_decoder.h  mrxs_format_plugin.h  mrxs_index_reader.h  mrxs_ini_parser.h  mrxs_internal.h  mrxs_plan_builder.h  mrxs_tile_executor.h  spatial_index.h
include/fastslide/readers/qptiff/: metadata_parser.h  qptiff.h  qptiff_format_plugin.h  qptiff_metadata_loader.h  qptiff_plan_builder.h  qptiff_tile_executor.h
include/fastslide/resample/: average.h  lanczos.h  utilities.h
include/fastslide/runtime/: cache_interface.h  format_descriptor.h  global_cache_manager.h  lru_tile_cache.h  plugin_loader.h  reader_registry.h  tile_writer.h
include/fastslide/runtime/io/: binary_utils.h  file_reader.h
include/fastslide/runtime/tile_writer/: fs_profile.h  tile_writer_strategy.h
include/fastslide/runtime/tile_writer/blended/: accumulate.h  blended_strategy.h  mks_kernel.h  resample_mks.h  srgb_linear.h
include/fastslide/runtime/tile_writer/direct/: copy_planar.h  copy_rgb8.h  direct_strategy.h  fills.h
include/fastslide/utilities/: cache.h  colors.h  hash.h  sha-256.h  tile_cache_manager.h  unordered_dense.h
include/fastslide/utilities/tiff/: directory_processor.h  planar_interleaver.h  tiff_cache_service.h  tiff_file.h  tiff_pool.h  tile_utilities.h
python/: test_import.py
python/fastslide/: __init__.py
src/aifocore/pathology/: inference.cpp  inference_engine_module.cpp  inference_fimage.cpp
src/aifocore/shared/python/: vector_module.cpp
src/aifocore/status/: trace_example.cpp
src/aifocore/tiling/python/: grid_module.cpp
src/aifocore/utilities/: thread_pool_singleton.cc
src/fastslide/: channel_selection_test.cpp  image.cpp  image_test.cpp  slide_reader.cpp  slide_reader_test.cpp
src/fastslide/c/: fastslide.cpp  image.cpp  registry.cpp  slide_reader.cpp  utilities.cpp
src/fastslide/core/: region_conversion_test.cpp  tile_plan_test.cpp  tile_request_test.cpp
src/fastslide/python/: cache.cpp  fastslide.cpp  reader.cpp
src/fastslide/readers/: tiff_based_reader.cpp
src/fastslide/readers/aperio/: aperio.cpp  aperio_format_plugin.cpp  aperio_plan_builder.cpp  aperio_tile_executor.cpp  metadata_parser.cpp  metadata_parser_test.cpp
src/fastslide/readers/mrxs/: mrxs.cpp  mrxs_data_reader.cpp  mrxs_decoder.cpp  mrxs_format_plugin.cpp  mrxs_index_reader.cpp  mrxs_ini_parser.cpp  mrxs_plan_builder.cpp  mrxs_tile_executor.cpp  spatial_index.cpp
src/fastslide/readers/qptiff/: metadata_parser.cpp  metadata_parser_test.cpp  qptiff.cpp  qptiff_format_plugin.cpp  qptiff_metadata_loader.cpp  qptiff_plan_builder.cpp  qptiff_tile_executor.cpp
src/fastslide/runtime/: cache_interface_test.cpp  cache_types_test.cpp  global_cache_manager.cpp  lru_tile_cache.cpp  lru_tile_cache_test.cpp  plugin_loader.cpp  reader_registry.cpp  reader_registry_test.cpp  register_builtin_formats.cpp  tile_writer.cpp  tile_writer_test.cpp
src/fastslide/runtime/io/: binary_utils.cpp  file_reader.cpp
src/fastslide/runtime/tile_writer/blended/: accumulate.cpp  accumulate_test.cpp  blended_strategy.cpp  mks_kernel.cpp  resample_mks.cpp  srgb_linear.cpp
src/fastslide/runtime/tile_writer/direct/: copy_planar.cpp  copy_rgb8.cpp  direct_strategy.cpp  fills.cpp
src/fastslide/utilities/: cache.cpp  cache_test.cpp  colors.cpp  hash.cpp  sha-256.c  tile_cache_manager.cpp
src/fastslide/utilities/tiff/: directory_processor.cpp  planar_interleaver.cpp  tiff_cache_service.cpp  tiff_file.cpp  tiff_file_test.cpp  tiff_pool.cpp  tiff_pool_test.cpp  tile_utilities.cpp  tile_utilities_test.cpp
subprojects/: highway.wrap
tests/python/: cache_test.py  slide_reader_test.py
tools/: copy.bara.sky  fastslidetool.cpp
