[build-system]
requires = ["meson-python>=0.15.0", "ninja"]
build-backend = "mesonpy"

[project]
name = "fastslide"
version = "0.1.0"
description = "High-performance whole slide image reader for digital pathology"
readme = "README.md"
authors = [
    {name = "Jonas Teuwen", email = "j.teuwen@nki.nl"}
]
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/NKI-AI/fastslide"
Documentation = "https://docs.aifo.dev/fastslide/"
Repository = "https://github.com/NKI-AI/fastslide"
Issues = "https://github.com/NKI-AI/fastslide/issues"

[tool.meson-python.args]
setup = [
    "--wrap-mode=forcefallback",
    "--prefer-static",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

